--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terra Cotta Coffee</title>
-</head>
-<body>
-    
-</body>
-</html>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;1,400&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <link rel="stylesheet" href="style.css">
+    </head>
+<body class="bg-grain">
+
+    <nav class="fixed w-full z-50 px-8 py-6 flex justify-between items-center bg-[#FDFCF8]/80 backdrop-blur-md">
+        <div class="text-2xl font-semibold tracking-tighter serif italic">Terra Cotta Coffee</div>
+        <div class="hidden md:flex space-x-8 text-xs uppercase tracking-widest font-semibold">
+            <a href="#" class="hover:text-[#D4A373] transition">The Roastery</a>
+            <a href="#" class="hover:text-[#D4A373] transition">Menu</a>
+            <a href="#" class="hover:text-[#D4A373] transition">Locations</a>
+        </div>
+        <button class="border border-[#3C2A21] px-6 py-2 text-xs uppercase tracking-widest hover:bg-[#3C2A21] hover:text-white transition">Visit Us</button>
+    </nav>
