--- a/index.html
+++ b/index.html
@@ -20,3 +20,23 @@
         </div>
         <button class="border border-[#3C2A21] px-6 py-2 text-xs uppercase tracking-widest hover:bg-[#3C2A21] hover:text-white transition">Visit Us</button>
     </nav>
+    <header class="relative h-screen flex items-center justify-center pt-20 overflow-hidden">
+        <div class="container mx-auto px-6 grid md:grid-cols-2 items-center gap-12">
+            <div class="reveal-left">
+                <span class="uppercase tracking-[0.3em] text-xs text-[#D4A373] font-bold">Since 1954 • Milano</span>
+                <h1 class="text-7xl md:text-9xl mt-4 leading-tight">Terra Cotta  <br><span class="italic">Coffee</span></h1>
+                <p class="mt-6 text-lg text-[#603601] max-w-md leading-relaxed">
+                    A symphony of roasted beans and Roman tradition. We don't just serve coffee; we pour Italian soul into every cup.
+                </p>
+                <div class="mt-10 flex space-x-4">
+                    <button class="bg-[#3C2A21] text-white px-10 py-4 rounded-full text-xs uppercase tracking-widest hover:bg-[#D4A373] transition-all shadow-xl">Order Now</button>
+                    <button class="border border-[#3C2A21] px-10 py-4 rounded-full text-xs uppercase tracking-widest hover:bg-white transition-all">Our Story</button>
+                </div>
+            </div>
+            
+            <div class="relative flex justify-center reveal-right">
+                <div class="arch-image w-72 h-[450px] md:w-80 md:h-[550px] bg-[url('https://images.unsplash.com/photo-1514432324607-a09d9b4aefdd?q=80&w=1974&auto=format&fit=crop')] bg-cover bg-center shadow-2xl z-10 border-[12px] border-white"></div>
+                <div class="absolute -bottom-10 -right-10 w-48 h-48 rounded-full bg-[#EAD7BB] -z-0 hidden md:block opacity-50"></div>
+            </div>
+        </div>
+    </header>
