--- a/index.html
+++ b/index.html
@@ -40,3 +40,40 @@
             </div>
         </div>
     </header>
+    <section class="py-24 coffee-gradient">
+        <div class="container mx-auto px-6">
+            <div class="text-center mb-20 reveal">
+                <h2 class="text-5xl md:text-6xl italic">The Morning Ritual</h2>
+                <div class="w-24 h-px bg-[#D4A373] mx-auto mt-4"></div>
+            </div>
+
+            <div class="grid md:grid-cols-3 gap-12">
+                <div class="reveal shadow-sm hover:shadow-xl transition-shadow bg-white p-8 rounded-2xl group">
+                    <div class="overflow-hidden rounded-xl mb-6">
+                        <img src="https://images.unsplash.com/photo-1534778101976-62847782c213?q=80&w=1974&auto=format&fit=crop" class="group-hover:scale-110 transition duration-500">
+                    </div>
+                    <h3 class="text-3xl mb-2">Classic Macchiato</h3>
+                    <p class="text-sm text-gray-600 mb-4 font-light">Double shot espresso "marked" with silky micro-foam.</p>
+                    <span class="text-[#D4A373] font-bold font-sans">€4.50</span>
+                </div>
+
+                <div class="reveal shadow-sm hover:shadow-xl transition-shadow bg-white p-8 rounded-2xl group" style="transition-delay: 200ms;">
+                    <div class="overflow-hidden rounded-xl mb-6">
+                        <img src="https://images.unsplash.com/photo-1595434066389-99c30d381047?q=80&w=2070&auto=format&fit=crop" class="group-hover:scale-110 transition duration-500">
+                    </div>
+                    <h3 class="text-3xl mb-2">Torta al Limone</h3>
+                    <p class="text-sm text-gray-600 mb-4 font-light">Amalfi lemon zest cake infused with local honey.</p>
+                    <span class="text-[#D4A373] font-bold font-sans">€6.00</span>
+                </div>
+
+                <div class="reveal shadow-sm hover:shadow-xl transition-shadow bg-white p-8 rounded-2xl group" style="transition-delay: 400ms;">
+                    <div class="overflow-hidden rounded-xl mb-6">
+                        <img src="https://images.unsplash.com/photo-1572442388796-11668a67e53d?q=80&w=2070&auto=format&fit=crop" class="group-hover:scale-110 transition duration-500">
+                    </div>
+                    <h3 class="text-3xl mb-2">The Affogato</h3>
+                    <p class="text-sm text-gray-600 mb-4 font-light">Vanilla bean gelato drowned in a shot of dark roast.</p>
+                    <span class="text-[#D4A373] font-bold font-sans">€7.50</span>
+                </div>
+            </div>
+        </div>
+    </section>
