--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
                 <div class="reveal shadow-sm hover:shadow-xl transition-shadow bg-white p-8 rounded-2xl group" style="transition-delay: 200ms;">
                     <div class="overflow-hidden rounded-xl mb-6">
-                        <img src="https://images.unsplash.com/photo-1595434066389-99c30d381047?q=80&w=2070&auto=format&fit=crop" class="group-hover:scale-110 transition duration-500">
+                        <img src="./Images/torta-al-limone-lemon-cake_1200x800.jpg" class="group-hover:scale-110 transition duration-500">
                     </div>
                     <h3 class="text-3xl mb-2">Torta al Limone</h3>
                     <p class="text-sm text-gray-600 mb-4 font-light">Amalfi lemon zest cake infused with local honey.</p>
