--- a/index.html
+++ b/index.html
@@ -77,3 +77,20 @@
             </div>
         </div>
     </section>
+    <footer class="bg-[#3C2A21] text-[#EAD7BB] py-20">
+        <div class="container mx-auto px-6 text-center">
+            <h2 class="text-4xl md:text-5xl italic mb-8">Terra Cotta Coffee.</h2>
+            <p class="uppercase tracking-widest text-xs mb-12">Piazza del Popolo, 17, Karachi • +92 315 1147407</p>
+            <div class="flex justify-center space-x-6">
+                <a href="#" class="hover:text-white transition">Instagram</a>
+                <a href="#" class="hover:text-white transition">Facebook</a>
+                <a href="#" class="hover:text-white transition">Journal</a>
+            </div>
+            <div class="mt-20 text-[10px] opacity-40 tracking-widest uppercase">
+                &copy; 2025 Terra Cotta Coffee. All rights reserved. <br>
+                <h4>Developed by Zaid Mehmood.</h4>
+            </div>
+        </div>
+    </footer>
+    </body>
+</html>
