Added animation and link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="relative h-screen flex items-center justify-center pt-20 overflow-hidden">
         <div class="container mx-auto px-6 grid md:grid-cols-2 items-center gap-12">
             <div class="reveal-left">
-                <span class="uppercase tracking-[0.3em] text-xs text-[#D4A373] font-bold">Since 1954 • Milano</span>
+                <span class="uppercase tracking-[0.3em] text-xs text-[#D4A373] font-bold">Since 1980 • Karachi</span>
                 <h1 class="text-7xl md:text-9xl mt-4 leading-tight">Terra Cotta  <br><span class="italic">Coffee</span></h1>
                 <p class="mt-6 text-lg text-[#603601] max-w-md leading-relaxed">
                     A symphony of roasted beans and Roman tradition. We don't just serve coffee; we pour Italian soul into every cup.
@@ -82,9 +82,9 @@
             <h2 class="text-4xl md:text-5xl italic mb-8">Terra Cotta Coffee.</h2>
             <p class="uppercase tracking-widest text-xs mb-12">Piazza del Popolo, 17, Karachi • +92 315 1147407</p>
             <div class="flex justify-center space-x-6">
-                <a href="#" class="hover:text-white transition">Instagram</a>
-                <a href="#" class="hover:text-white transition">Facebook</a>
-                <a href="#" class="hover:text-white transition">Journal</a>
+                <a href="https://github.com/zaidmehmood147" class="hover:text-white transition">Github</a>
+                <a href="https://www.linkedin.com/in/zaid-mehmood147/" class="hover:text-white transition">LinkedIn</a>
+                <a href="#" class="hover:text-white transition"></a>
             </div>
             <div class="mt-20 text-[10px] opacity-40 tracking-widest uppercase">
                 &copy; 2025 Terra Cotta Coffee. All rights reserved. <br>
@@ -92,5 +92,6 @@
             </div>
         </div>
     </footer>
+    <script src="main.js"></script>
     </body>
 </html>
