--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;1,400&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="./Images/Terra Cotta Coffee.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./Images/Zaid (1).png" type="image/x-icon">
     </head>
 <body class="bg-grain">
 
